--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -15,6 +15,6 @@
         </nav>
     </header>
     <div class="container" id="allPosts"></div>
-    <script src="script.js"></script>
+    <script src="/public/script.js"></script>
 </body>
 </html>
