--- a/backend/public/auth.html
+++ b/backend/public/auth.html
@@ -23,6 +23,6 @@
             <p>Already have an account? <a href="#" onclick="showLogin()">Login here</a></p>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="/public/script.js"></script>
 </body>
 </html>
