--- a/backend/public/post.html
+++ b/backend/public/post.html
@@ -18,6 +18,6 @@
             <button onclick="addComment()">Comment</button>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="/public/script.js"></script>
 </body>
 </html>
