--- a/backend/public/profile.html
+++ b/backend/public/profile.html
@@ -32,6 +32,6 @@
         </div>
         <div id="userPosts"></div>
     </div>
-    <script src="script.js"></script>
+    <script src="/public/script.js"></script>
 </body>
 </html>
