--- a/backend/public/auth.html
+++ b/backend/public/auth.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Auth</title>
-    <link rel="stylesheet" href="/public/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
@@ -23,6 +23,6 @@
             <p>Already have an account? <a href="#" onclick="showLogin()">Login here</a></p>
         </div>
     </div>
-    <script src="/public/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
