--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
-    <link rel="stylesheet" href="/public/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -15,6 +15,6 @@
         </nav>
     </header>
     <div class="container" id="allPosts"></div>
-    <script src="/public/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
