--- a/backend/public/post.html
+++ b/backend/public/post.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Post</title>
-    <link rel="stylesheet" href="/public/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav>
@@ -18,6 +18,6 @@
             <button onclick="addComment()">Comment</button>
         </div>
     </div>
-    <script src="/public/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
