--- a/backend/public/profile.html
+++ b/backend/public/profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>My Profile</title>
-    <link rel="stylesheet" href="/public/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
@@ -32,6 +32,6 @@
         </div>
         <div id="userPosts"></div>
     </div>
-    <script src="/public/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
